mywork/force-app/main/default/objects/Build_Component__c/Build_Component__c.object-meta.xml
<CustomObject>
    <label>Build Component</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Build Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>