mywork/force-app/main/default/objects/Build_Component__c/fields/Backlog_Component__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog Component</label>
    <referenceTo>Backlog_Component__c</referenceTo>
    <relationshipLabel>Build Componnets</relationshipLabel>
    <relationshipName>Build_Componnets</relationshipName>
    <type>Lookup</type>
</CustomField>