mywork/force-app/main/default/objects/Build_Component__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <label>Build</label>
    <referenceTo>Build__c</referenceTo>
    <relationshipLabel>Build Components</relationshipLabel>
    <relationshipName>Build_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>