mywork/force-app/main/default/objects/Build_Component__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Build Components</relationshipLabel>
    <relationshipName>Build_Components</relationshipName>
    <type>Lookup</type>
</CustomField>