mywork/force-app/main/default/objects/Build_Component__c/fields/Include_Documented_Components__c.field-meta.xml
<CustomField>
    <fullName>Include_Documented_Components__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that permissions for documented components should be deployed with the profile</description>
    <inlineHelpText>Indicates that permissions for documented components should be deployed with the profile</inlineHelpText>
    <label>Include Documented Components</label>
    <type>Checkbox</type>
</CustomField>