mywork/force-app/main/default/objects/Build_Component__c/fields/Include_Entire_Profile__c.field-meta.xml
<CustomField>
    <fullName>Include_Entire_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the entire profile should be deployed</description>
    <inlineHelpText>Indicates that the entire profile should be deployed</inlineHelpText>
    <label>Include Entire Profile</label>
    <type>Checkbox</type>
</CustomField>