mywork/force-app/main/default/objects/Build_Component__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <label>Instance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>