mywork/force-app/main/default/objects/Build_Component__c/fields/Is_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Is_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this component will be deleted</description>
    <inlineHelpText>Indicates that this component will be deleted</inlineHelpText>
    <label>Is Deletion?</label>
    <type>Checkbox</type>
</CustomField>