mywork/force-app/main/default/objects/Build_Component__c/fields/Is_Manual_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this component was marked to be deploymed manually</description>
    <label>Is Manual Deployment</label>
    <type>Checkbox</type>
</CustomField>