mywork/force-app/main/default/objects/Build_Component__c/fields/Is_Profile__c.field-meta.xml
<CustomField>
    <fullName>Is_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this build component is a profile permission</description>
    <label>Is Profile</label>
    <type>Checkbox</type>
</CustomField>