mywork/force-app/main/default/objects/Build_Component__c/fields/Profile_Data_2__c.field-meta.xml
<CustomField>
    <fullName>Profile_Data_2__c</fullName>
    <description>Stores the aggregated profile selection data</description>
    <label>Profile Data 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>