mywork/force-app/main/default/objects/Build_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Build__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Parent_Component__c</columns>
    <columns>Backlog_Component__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>